# get-photos-lambda

./: .gitignore  Cargo.toml  Lambda.sample.toml  Makefile  README.md
.github/: dependabot.yml
doc/: README.md
src/: lib.rs  main.rs
tests/: integration_test.rs
