[package]
name = "get-photos-lambda"
version = "0.1.0"
authors = ["Darren Meehan <hi@drn.ie>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# lambda = { version = "0.2.1", package = "lambda_runtime" }
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master" }
serde_json = "1.0.55"
tokio = { version = "0.2", features = ["full"] }
# FIXME Is this dependancy needed?
# FIXME Review what dependancies are exported by lambda..
lambda_runtime_client = "0.2.2"
serde_derive = "1.0.106"
serde = "1.0.118"
rusoto = "0.24.2"
rusoto_dynamodb = "0.43.0"
#rusoto_core = {version = "0.43.0", default_features = false, features=["rustls"]}
rusoto_core = {version = "0.43.0"}
simple_logger = "1.6.0"
log = "0.4.8"
tokio-core = "0.1.17"
dynomite = "0.8.2"
